<resources>
    <string name="app_name">Foodorder</string>
    <string name="item_search_view_hint">Search</string>
    <string name="home_activity_title">Please input the name</string>
    <string name="loading_info">Loading the data&#8230;</string>
    <string name="loading_failed">Failed to load the data&#8230;</string>
    <string name="auth_info">Authenticating&#8230;</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="title_activity_home_activity">FoodOrder</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_game">Game</string>
    <string name="menu_theme">Theme</string>
    <string name="menu_chefWaiter">Chef\u0026Waiter</string>
    <string name="menu_manager">Manager</string>
    <string name="menu_settings">Login\u0026Settings</string>
    <string name="menu_feedback">Feedback</string>
    <string name="menu_about">About</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="title_activity_setting">SettingsActivity</string>
    <string name="title_activity_submit">SubmitActivity</string>
    <string name="title_activity_upload">UploadActivity</string>
    <string name="title_activity_initial">InitialActivity</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_register1">UploadActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
    <string name="wine_drink_sheet">Wine\u0026Drink</string><!-- Wine&Drink -->

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>