<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_home"
                android:icon="@drawable/ic_menu_camera"
                android:title="@string/menu_home"/>
        <item
                android:id="@+id/nav_game"
                android:icon="@drawable/ic_menu_gallery"
                android:title="@string/menu_game"/>
        <item
                android:id="@+id/nav_theme"
                android:icon="@drawable/ic_menu_slideshow"
                android:title="@string/menu_theme"/>
        <item
                android:id="@+id/nav_setting"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/menu_settings"/>
    </group>

    <item android:title="Foodorder">
        <menu>
            <item
                    android:id="@+id/nav_feedback"
                    android:icon="@drawable/ic_menu_feedback"
                    android:title="@string/menu_feedback"/>
            <item
                    android:id="@+id/nav_about"
                    android:icon="@drawable/ic_menu_help"
                    android:title="@string/menu_about"/>
        </menu>
    </item>

</menu>
